<resources>
    <string name="app_name" translatable="false">Do it!</string>
    <string name="url_service" translatable="false">https://api.github.com/</string><!-- TODO -->

    <string name="loading">Loading…</string>
    <string name="message_error_service_call">Oops! Something went wrong, please try again.</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="welcome">Welcome</string>
    <string name="log_in">Log in</string>
    <string name="field_required">Field required</string>
    <string name="the_email_not_valid">The email is not valid</string>
    <string name="sing_in">Sign In</string>
    <string name="sing_up">Sign Up</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="join">Join</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="failed_create_account">Failed to create the account</string>
    <string name="name_field_required">Name field required</string>
    <string name="email_field_required">Email field required</string>
    <string name="password_field_required">Password field required</string>
    <string name="wrong_password">Wrong password</string>
    <string name="user_doesnt_exist">User doesn\'t exists</string>
    <string name="complete_user_field">Complete Username field</string>
    <string name="complete_pass_field">Complete Password field</string>
    <string name="wrong_email">Wrong email account</string>
    <string name="its_all_good">It\'s all good my friend!</string>
    <string name="lets_do_it">Let\'s Do it!</string>
    <string name="create_groups">Create groups for different purpouses</string>
    <string name="add_manage_tasks">Add &amp; Manage Tasks</string>
    <string name="how_you_are_doing">View how you are doing!</string>
    <string name="to_dashboard">Go to dashboard</string>
    <string name="add_title">Add title</string>
    <string name="add_description">Add description</string>
    <string name="add">ADD</string>
    <string name="cmon_you_can_do_this">C\'mon you can Do it!</string>
    <string name="good_job">Task done! Good job!</string>
    <string name="task_added">Task added</string>
    <string name="shop">Shop</string>
    <string name="work">Work</string>
    <string name="health">Health</string>
    <string name="travel">Travel</string>
    <string name="bills">Bills</string>
    <string name="auto">Auto</string>
    <string name="item">%1$d ITEMS</string>
    <string name="zero_item">0 ITEMS</string>
    <string-array name="group_array">
        <item>@string/shop</item>
        <item>@string/work</item>
        <item>@string/health</item>
        <item>@string/travel</item>
        <item>@string/bills</item>
        <item>@string/auto</item>
    </string-array>
    <string name="all">All</string>
    <string name="simbol">%</string>
    <string name="completed">Completed</string>
    <string name="do_it">Do it!</string>
    <string name="failed_add_task">Failed to add the task</string>
    <string name="no_task">No tasks added yet</string>
</resources>
