<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        app:srcCompat="@drawable/home_logo"
        />

    <LinearLayout
        android:id="@+id/linearSingIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#ff3366"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sing_in"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:r
            />

        <LinearLayout
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:gravity="center"
                android:text="@string/dont_have_account"
                android:textColor="#ffffff"
                android:textSize="13sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:text="@string/sing_up"
                android:textColor="#ffffff"
                android:textSize="13sp"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_above="@id/linearSingIn"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/editTextUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/username"
            android:hint="@string/username"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:textSize="14sp"
            android:theme="@style/TextEditStyle"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.1"
            android:background="#ffffff"
            />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25.5dp"
            android:textSize="14sp"
            android:theme="@style/TextEditStyle"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.1"
            android:background="#ffffff"
            />

    </LinearLayout>

</RelativeLayout>
